                            CHANGES IN VERSION 0.6-12 (July 2018)

USER LEVEL CHANGES

-- New option for printing MCMC samplers of particular type(s): conf$printSamplers(type = "conjugate"), for example.

-- Burnin is now handled natively by mcmc$run method (rather than as a post-processing step in runMCMC).

BUG FIXES

-- Corrected calculation of weights in bootstrap particle filter (calculation was omitting previous weights when particles were not resampled). Also clarified help information regarding equally-weighted samples when resampling not done in an iteration.

-- Add return value to auto-generated 'r' function for user-defined distribution to avoid tripping error trap introduced in version 0.6-11.

-- Avoid checking for ragged arrays when building models; this fixes an overly zealous check introduced by accident in version 0.6-11.

-- configureMCMC no longer assigns a RW_block sampler to non-conjugate inverse-Wishart nodes.

DEVELOPER LEVEL CHANGES

-- Shifted to bookdown/Rmarkdown format for user manual.

-- Updated configure.ac to use CXX11 not CXX1X and to avoid calling AC_PROG_CXX before CXX and related variables set based on R configuration, per CRAN request.

                            CHANGES IN VERSION 0.6-11 (June 2018)

USER LEVEL CHANGES

-- Bayesian nonparametric mixture models can now be used in BUGS code, in particular Chinese Restaurant process (using the 'dCRP' distribution) and stick-breaking (using the 'stick_breaking' function) representations of Dirichlet process models. This allows mixture models with an unknown number of components. NIMBLE's default MCMC configuration will assign specialized samplers to relevant nodes of the model. For this release, this is a beta (experimental) feature.

-- Four new resampling methods are available for use in the auxiliary and bootstrap filters.  Resampling methods can be specified by the resamplingMethod control list argument to buildBootstrapFilter and buildAuxiliaryFilter.
