@@ -31,26 +31,45 @@
 initializeModel <- nimbleFunction(
     name = 'initializeModel',
     setup = function(model, silent = FALSE) {
+        
         initFunctionList <- nimbleFunctionList(nodeInit_virtual)
-        iter <- 1
+        startInd <- 1
 
         RHSonlyNodes <- model$getMaps('nodeNamesRHSonly')
-        if(length(RHSonlyNodes) > 0) {
-            initFunctionList[[iter]] <- checkRHSonlyInit(model = model, nodes = RHSonlyNodes)
-            iter <- iter + 1
+        RHSonlyVarNames <- removeIndexing(RHSonlyNodes)
+        RHSonlyVarNamesUnique <- unique(RHSonlyVarNames)
+        RHSonlyNodesListByVariable <- lapply(RHSonlyVarNamesUnique, function(var) RHSonlyNodes[RHSonlyVarNames==var])
+        if(length(RHSonlyNodesListByVariable) > 0) {
+            lengths <- sapply(RHSonlyNodesListByVariable, length)
+            if(any(lengths == 0)) stop('something went wrong in RHS node model initialization')
+            if(sum(lengths) != length(RHSonlyNodes)) stop('something went wrong in RHS node model initialization')
+            for(i in seq_along(RHSonlyNodesListByVariable)) {
+                initFunctionList[[startInd]] <- checkRHSonlyInit(model = model, nodes = RHSonlyNodesListByVariable[[i]], variable = RHSonlyVarNamesUnique[i])
+                startInd <- startInd + 1
+            }
         }
 
-        stochNonDataNodes <- model$getNodeNames(stochOnly = TRUE, includeData = FALSE)
-        for(i in seq_along(stochNonDataNodes))
-            initFunctionList[[iter + i - 1]] <- stochNodeInit(model, stochNonDataNodes[i], silent)
+        topDetermNodes <- model$getNodeNames(topOnly = TRUE, determOnly = TRUE)
+        for(i in seq_along(topDetermNodes)) {
+            initFunctionList[[startInd]] <- topDetermNodeInit(model = model, node = topDetermNodes[i])
+            startInd <- startInd + 1
+        }
 
-        ##allDetermNodes <- model$getNodeNames(determOnly = TRUE)
-        ##determNodesNodeFxnVector <- nodeFunctionVector(model = model, nodeNames = allDetermNodes)
-        determDepsOfRHSonly <- model$getDependencies(model$getMaps('nodeNamesRHSonly'), determOnly = TRUE)
+        stochNodes <- model$getNodeNames(stochOnly = TRUE)#, includeData = FALSE)
+        for(i in seq_along(stochNodes)) {
+            node <- stochNodes[i]
+            isData <- model$isData(node)
+            if(isData) {
+                initFunctionList[[startInd]] <- stochDataNodeInit(model = model, node = node, silent = silent)
+            } else {
+                initFunctionList[[startInd]] <- stochNonDataNodeInit(model = model, node = node, silent = silent)
+            }
+            startInd <- startInd + 1
+        }
+
     },
     
     run = function() {
-        model$calculate(determDepsOfRHSonly)
         for(i in seq_along(initFunctionList)) {
             initFunctionList[[i]]$run()
         }
@@ -64,31 +83,72 @@ nodeInit_virtual <- nimbleFunctionVirtual()
 checkRHSonlyInit <- nimbleFunction(
     name = 'checkRHSonlyInit',
     contains = nodeInit_virtual,
-    setup = function(model, nodes) {},
+    setup = function(model, nodes, variable) {},
     run = function() {
         vals <- values(model, nodes)
-        if(is.na.vec(vals) | is.nan.vec(vals)) print('warning: value of right hand side only node not initialized')
+        if(is.na.vec(vals) | is.nan.vec(vals)) print('warning: value in right-hand-side-only variable is NA or NaN, in variable: ', variable)
     },    where = getLoadingNamespace()
 )
 
-stochNodeInit <- nimbleFunction(
-    name = 'stochNodeInit',
+topDetermNodeInit <- nimbleFunction(
+    name = 'topDetermNodeInit',
+    contains = nodeInit_virtual,
+    setup = function(model, node) {},
+    run = function() {
+        nodeValue <- values(model, node)
+        if(is.na.vec(nodeValue) | is.nan.vec(nodeValue)) calculate(model, node)
+        nodeValue <- values(model, node)
+        if(is.na.vec(nodeValue) | is.nan.vec(nodeValue)) print('warning: value of top-level deterministic node ',node,': value is NA or NaN even after trying to calculate.')
+    },    where = getLoadingNamespace()
+)
+
+stochDataNodeInit <- nimbleFunction(
+    name = 'stochDataNodeInit',
     contains = nodeInit_virtual,
     setup = function(model, node, silent) {
-        thisDetermNodes <- model$getDependencies(node, determOnly=TRUE)
+        depDetermNodes <- model$getDependencies(node, determOnly=TRUE)
     },
     run = function() {
-        theseVals <- values(model, node)
-        if(is.na.vec(theseVals) | is.nan.vec(theseVals)) simulate(model, node)
-        theseVals <- values(model, node)
-        if(is.na.vec(theseVals) | is.nan.vec(theseVals)) print('warning: value of stochastic node ',node,': value is NA or NaN even after trying to simulate.')
+        nodeValue <- values(model, node)
+        if(is.na.vec(nodeValue) | is.nan.vec(nodeValue)) print('warning: value of data node ',node,': value is NA or NaN.')
+        lp <- calculate(model, node)
+        if(is.na(lp) | is.nan(lp)) print('warning: logProb of data node ', node, ': logProb is NA or NaN.')
+        if(!(is.na(lp) | is.nan(lp))) {
+            if(lp == -Inf) {
+                if(!silent) print('warning: logProb of data node ', node, ': logProb is -Inf.')
+            } else if(lp < -1e12) {
+                if(!silent) print('warning: logProb of data node ', node, ': logProb less than -1e12.')
+            }
+        }
+        model$calculate(depDetermNodes)
+        depDetermValues <- values(model, depDetermNodes)
+        if(is.na.vec(depDetermValues) | is.nan.vec(depDetermValues)) print('warning: deterministic dependents of node ',node,': value is NA or NaN.')
+    },    where = getLoadingNamespace()
+)
+
+stochNonDataNodeInit <- nimbleFunction(
+    name = 'stochNonDataNodeInit',
+    contains = nodeInit_virtual,
+    setup = function(model, node, silent) {
+        depDetermNodes <- model$getDependencies(node, determOnly=TRUE)
+    },
+    run = function() {
+        nodeValue <- values(model, node)
+        if(is.na.vec(nodeValue) | is.nan.vec(nodeValue)) simulate(model, node)
+        nodeValue <- values(model, node)
+        if(is.na.vec(nodeValue) | is.nan.vec(nodeValue)) print('warning: value of stochastic node ',node,': value is NA or NaN even after trying to simulate.')
         lp <- calculate(model, node)
         if(is.na(lp) | is.nan(lp)) print('warning: problem initializing stochastic node ', node, ': logProb is NA or NaN.')
         if(!(is.na(lp) | is.nan(lp))) {
-            if(lp < -1e12) {
+            if(lp == -Inf) {
+                if(!silent) print('warning: problem initializing stochastic node ', node, ': logProb is -Inf.')
+            } else if(lp < -1e12) {
                 if(!silent) print('warning: problem initializing stochastic node ', node, ': logProb less than -1e12.')
             }
         }
-        model$calculate(thisDetermNodes)
+        model$calculate(depDetermNodes)
+        depDetermValues <- values(model, depDetermNodes)
+        if(is.na.vec(depDetermValues) | is.nan.vec(depDetermValues)) print('warning: deterministic dependents of node ',node,': value is NA or NaN.')
     },    where = getLoadingNamespace()
 )
+
