@@ -1,3 +1,7 @@
+USER LEVEL CHANGES
+
+-- More sophisticated model initialization routine for correctly initializing complex state space models.
+
                             CHANGES IN VERSION 0.6-12 (July 2018)
 
 USER LEVEL CHANGES
